# desktop-app

./: .eslintrc.json  .gitignore  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
.husky/: pre-commit
docs/: AdditionalResources.md  AssetSwaps.md  Background.md  ChannelBackups.md  ChannelRequests.md  CreatingWallet.md  Deposits.md  FundingWallet.md  InitializingMnemonic.md  Installation.md  OpeningChannel.md  OpeningChannelWithAssets.md  OpeningChannelWithoutAssets.md  README.md  Settings.md  UnlockingWallet.md  Withdrawals.md
public/: splashscreen.html
src/: constants.ts  i18n.ts  main.tsx  styles.css
src-tauri/: .env  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns  logo.icns
src-tauri/src/: db.rs  main.rs  rgb_node.rs  test_init_process.rs
src/app/: index.tsx
src/app/hubs/: websocketService.ts
src/app/router/: index.tsx  paths.ts
src/app/store/: hooks.ts  index.ts
src/components/AssetDetailsModal/: index.tsx
src/components/AssetRow/: index.tsx
src/components/AssetSelector/: index.tsx
src/components/BackupModal/: index.tsx
src/components/ChannelActions/: index.tsx
src/components/ChannelCard/: index.tsx
src/components/ConnectionDetails/: index.tsx
src/components/CreateUTXOModal/: index.tsx
src/components/ErrorBoundary/: index.tsx
src/components/HistoryFilters/: index.tsx
src/components/IssueAssetModal/: index.tsx
src/components/Layout/: ChannelMenu.tsx  WalletMenu.tsx  config.tsx  index.tsx
src/components/LiquidityBar/: index.tsx
src/components/LiquidityCard/: index.tsx
src/components/Loader/: index.tsx
src/components/LogoutModal/: index.tsx
src/components/MinidenticonImg/: index.tsx
src/components/MnemonicDisplay/: index.tsx
src/components/MnemonicVerifyForm/: index.tsx
src/components/Modal/: index.tsx
src/components/NetworkSelector/: index.tsx
src/components/NotificationSystem/: index.tsx
src/components/OnChainDetailsOverlay/: index.tsx
src/components/PasswordSetupForm/: index.tsx
src/components/PeerManagementModal/: index.tsx
src/components/Select/: index.tsx
src/components/ShutdownAnimation/: index.tsx
src/components/Spinner/: index.tsx
src/components/StatusModal/: index.tsx
src/components/StatusToast/: index.tsx
src/components/StepIndicator/: index.tsx
src/components/SuccessCheckmark/: index.tsx
src/components/SupportModal/: index.tsx
src/components/SwapConfirmation/: index.tsx
src/components/SwapRecap/: index.tsx
src/components/Toolbar/: index.tsx
src/components/Trade/: AssetComponents.tsx  ExchangeRateSection.tsx  Header.tsx  MakerSelector.tsx  ManualSwapForm.tsx  NoChannelsMessage.tsx  NoTradingPairsMessage.tsx  NostrP2P.tsx  SizeButtons.tsx  SwapButton.tsx  SwapInputField.tsx  TakerSwapForm.tsx  TradeForm.tsx  index.ts  index.tsx
src/constants/: networks.ts
src/helpers/: address.ts  date.ts  datetime.ts  number.ts  types.ts  utils.ts
src/hooks/: useAppTranslation.ts  useBackup.ts  useOnClickOutside.ts  useUtxoErrorHandler.ts
src/locales/: index.ts
src/types/: i18n.d.ts
src/utils/: assetIcons.ts  logger.ts
(+121 files in other folders)
