[package]
name = "desktop-app"
version = "0.0.0"
description = "Kaleidoswap App"
authors = ["Kaleidoswap Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"

[dependencies]
tauri = { version = "1.5.4", features = [ "process-exit", "process-relaunch", "dialog-open", "fs-all", "window-close", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
fs_extra = "1.2"
dotenv = "0.15.0"
rusqlite = "0.32.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
default = []
