[package]
name = "desktop-app"
version = "0.1.0"
description = "Kaleidoswap App"
authors = ["Kaleidoswap Team"]
license = "MIT"
repository = "https://github.com/kaleidoswap/desktop-app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"

[dependencies]
tauri = { version = "1.5.4", features = [ "process-all", "dialog-save", "clipboard-write-text", "clipboard-read-text", "dialog-message", "dialog-open", "fs-all", "window-close", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
fs_extra = "1.2"
dotenv = "0.15.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }

futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
parking_lot = "0.12"

tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.22"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
default = []
